{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 735,
  "lineage": "9712d636-bbd6-c46a-fc53-06daf43752a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:listener/app/mahi-alb-test/9b53d683025eddc8/50dc8f0ed99c3d8f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:targetgroup/mahi-tg-test-green/0d96b24718a49f45",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:listener/app/mahi-alb-test/9b53d683025eddc8/50dc8f0ed99c3d8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:loadbalancer/app/mahi-alb-test/9b53d683025eddc8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.main",
            "aws_lb.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:listener/app/mahi-alb-test/9b53d683025eddc8/f3ff81d2cd322182",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:targetgroup/mahi-tg-test-blue/52ef8bcb492feca1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:listener/app/mahi-alb-test/9b53d683025eddc8/f3ff81d2cd322182",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:loadbalancer/app/mahi-alb-test/9b53d683025eddc8",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.main",
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:targetgroup/mahi-tg-test-green/0d96b24718a49f45",
            "arn_suffix": "targetgroup/mahi-tg-test-green/0d96b24718a49f45",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:targetgroup/mahi-tg-test-green/0d96b24718a49f45",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mahi-tg-test-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "mahi-tg-test-green"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-tg-test-green"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:targetgroup/mahi-tg-test-blue/52ef8bcb492feca1",
            "arn_suffix": "targetgroup/mahi-tg-test-blue/52ef8bcb492feca1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:targetgroup/mahi-tg-test-blue/52ef8bcb492feca1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mahi-tg-test-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "mahi-tg-test-blue"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-tg-test-blue"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a74612b4cf2181bf",
            "association_id": "eipassoc-0890c67cdaf247473",
            "domain": "vpc",
            "id": "eipalloc-0a74612b4cf2181bf",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e2a71287195d5fa1",
            "private_dns": "ip-10-0-1-9.ap-south-1.compute.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-13-234-92-111.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.92.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "mahi-eip-test-001"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-eip-test-001"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0446cf36432471708",
            "association_id": "eipassoc-09d9215637b049377",
            "domain": "vpc",
            "id": "eipalloc-0446cf36432471708",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c4f6e5d9ca739412",
            "private_dns": "ip-10-0-2-75.ap-south-1.compute.internal",
            "private_ip": "10.0.2.75",
            "public_dns": "ec2-43-205-57-239.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.57.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "mahi-eip-test-002"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-eip-test-002"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:internet-gateway/igw-042cf4c172dbe127b",
            "id": "igw-042cf4c172dbe127b",
            "owner_id": "073777684184",
            "tags": {
              "Environment": "test",
              "Name": "mahi-igw-test"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-igw-test"
            },
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:loadbalancer/app/mahi-alb-test/9b53d683025eddc8",
            "arn_suffix": "app/mahi-alb-test/9b53d683025eddc8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mahi-alb-test-2040077710.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073777684184:loadbalancer/app/mahi-alb-test/9b53d683025eddc8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mahi-alb-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-051cdfbfc9389117f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09c8bd2f6ff45f405"
              },
              {
                "subnet_id": "subnet-0f226cd466b186507"
              }
            ],
            "subnets": [
              "subnet-09c8bd2f6ff45f405",
              "subnet-0f226cd466b186507"
            ],
            "tags": {
              "Environment": "test",
              "Name": "mahi-alb-test"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-alb-test"
            },
            "vpc_id": "vpc-0e73c56e85d303709",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a74612b4cf2181bf",
            "connectivity_type": "public",
            "id": "nat-01f55749ba3d9eec1",
            "network_interface_id": "eni-0e2a71287195d5fa1",
            "private_ip": "10.0.1.9",
            "public_ip": "13.234.92.111",
            "subnet_id": "subnet-0f226cd466b186507",
            "tags": {
              "Environment": "test",
              "Name": "mahi-nat-test-001"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-nat-test-001"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0446cf36432471708",
            "connectivity_type": "public",
            "id": "nat-09d2f952415cd48df",
            "network_interface_id": "eni-0c4f6e5d9ca739412",
            "private_ip": "10.0.2.75",
            "public_ip": "43.205.57.239",
            "subnet_id": "subnet-09c8bd2f6ff45f405",
            "tags": {
              "Environment": "test",
              "Name": "mahi-nat-test-002"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-nat-test-002"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2546f24f6a5a25b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01f55749ba3d9eec1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2546f24f6a5a25b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038098b26fd4269dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09d2f952415cd48df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038098b26fd4269dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-042cf4c172dbe127b",
            "id": "r-rtb-0df882da92e8952011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df882da92e895201",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:route-table/rtb-0f2546f24f6a5a25b",
            "id": "rtb-0f2546f24f6a5a25b",
            "owner_id": "073777684184",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f55749ba3d9eec1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "mahi-routing-table-private-001"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-routing-table-private-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:route-table/rtb-038098b26fd4269dd",
            "id": "rtb-038098b26fd4269dd",
            "owner_id": "073777684184",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09d2f952415cd48df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "mahi-routing-table-private-002"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-routing-table-private-002"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:route-table/rtb-0df882da92e895201",
            "id": "rtb-0df882da92e895201",
            "owner_id": "073777684184",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042cf4c172dbe127b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "mahi-routing-table-public"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686aea12ed59f76a",
            "route_table_id": "rtb-0f2546f24f6a5a25b",
            "subnet_id": "subnet-094f0239923b3328a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0993ac8565979b9f8",
            "route_table_id": "rtb-038098b26fd4269dd",
            "subnet_id": "subnet-06b728fa9badad94c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058837c6bb06a1475",
            "route_table_id": "rtb-0df882da92e895201",
            "subnet_id": "subnet-0f226cd466b186507"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad9a6ea1b649b92",
            "route_table_id": "rtb-0df882da92e895201",
            "subnet_id": "subnet-09c8bd2f6ff45f405"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:security-group/sg-051cdfbfc9389117f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051cdfbfc9389117f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mahi-sg-alb-test",
            "name_prefix": "",
            "owner_id": "073777684184",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "mahi-sg-alb-test"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-sg-alb-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:security-group/sg-099986ba8f8f4397b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099986ba8f8f4397b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mahi-sg-task-test",
            "name_prefix": "",
            "owner_id": "073777684184",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "mahi-sg-task-test"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-sg-task-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:subnet/subnet-094f0239923b3328a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094f0239923b3328a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "073777684184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "mahi-private-subnet-test-001"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-private-subnet-test-001"
            },
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:subnet/subnet-06b728fa9badad94c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b728fa9badad94c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "073777684184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "mahi-private-subnet-test-002"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-private-subnet-test-002"
            },
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:subnet/subnet-0f226cd466b186507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f226cd466b186507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073777684184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "mahi-public-subnet-test-001"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-public-subnet-test-001"
            },
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:subnet/subnet-09c8bd2f6ff45f405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c8bd2f6ff45f405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073777684184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "mahi-public-subnet-test-002"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-public-subnet-test-002"
            },
            "vpc_id": "vpc-0e73c56e85d303709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073777684184:vpc/vpc-0e73c56e85d303709",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c99376315b927d3a",
            "default_route_table_id": "rtb-073424b1b9bb8e2e6",
            "default_security_group_id": "sg-02cd890851a1c3d72",
            "dhcp_options_id": "dopt-09c5423c3d86083f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e73c56e85d303709",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073424b1b9bb8e2e6",
            "owner_id": "073777684184",
            "tags": {
              "Environment": "test",
              "Name": "mahi-vpc-test"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "mahi-vpc-test"
            }
          }
        }
      ]
    }
  ]
}